fix .env description

--- a/.env
+++ b/.env
@@ -1,7 +1,8 @@
 # Параметры подключения к Postgres
+DB_URL=postgresql://postgres:postgres@postgres/postgres
+# Настройки ниже только для контейнера, DB_URL обязан содержать логин и пароль (они не будут браться из DB_USER, etc.)
 DB_USER=postgres
 DB_PASSWORD=postgres
-DB_URL=postgresql://postgres:postgres@postgres
 DB_NAME=postgres
 
 # Параметры подключения к redis
