--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.11"
 fastapi = "^0.115.12"
-pydantic = "^2.10.6"
+pydantic = {extras = ["email"], version = "^2.11.1"}
 pydantic-settings = "^2.8.1"
 sqlmodel = "^0.0.24"
 uvicorn = "^0.34.0"
@@ -24,6 +24,15 @@ black = "^25.1.0"
 mypy = "^1.15.0"
 types-passlib = "^1.7.7.20250326"
 pylint = "^3.3.6"
+ruff = "^0.11.2"
+
+
+[tool.poetry.group.test.dependencies]
+pytest = {extras = ["conftest"], version = "^8.3.5"}
+httpx = "^0.28.1"
+pytest-cov = "^6.0.0"
+freezegun = "^1.5.1"
+pytest-asyncio = "^0.26.0"
 
 [build-system]
 requires = ["poetry-core"]
